<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnTurnOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_on"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnTurnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_off"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnShowDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_device_name"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnOpenService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OPEN SERVICE"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSearchService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SEARCH SERVICE"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnGetConnected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_conected"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Write a message"
            android:inputType="textCapSentences"
            android:maxLength="30"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"/>

</LinearLayout>